# health-api

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_06_15_0002-4546689d8c2d_initial_migration.py  2025_06_18_0004-2d34c4e3ebb5_enhance_models_with_new_health_sector_.py  2025_06_18_0035-a702016c224d_add_new_health_sector_feature_models.py  2025_06_18_0606-1b37c2542f97_add_new_health_sector_feature_models.py
app/: main.py
app/api/dependencies/: auth.py  database.py
app/api/routes/: appointments.py  auth.py  doctors.py  insurance.py  lab.py  medical_records.py  patients.py  pharmacy.py  referral.py  telemedicine.py
app/auth/: jwt_handler.py  password_utils.py
app/core/: config.py
app/database/: base.py  session.py
app/middlewares/: cors.py
app/models/: __init__.py  appointment.py  consent.py  device.py  doctor.py  insurance.py  lab.py  medical_record.py  notification.py  patient.py  pharmacy.py  portal.py  referral.py  role.py  telemedicine.py  user.py
app/schemas/: appointment.py  auth.py  consent.py  device.py  doctor.py  insurance.py  lab.py  medical_record.py  notification.py  patient.py  pharmacy.py  portal.py  referral.py  role.py  telemedicine.py
diagrams/: explanation.md
scripts/: migrate.sh  start.sh  test.sh
tests/: conftest.py  test_auth.py  test_insurance.py  test_lab.py  test_pharmacy.py  test_referral.py  test_telemedicine.py
